fix change scss without refresh

--- a/interview_html/dev/style/partial/_frame1.scss
+++ b/interview_html/dev/style/partial/_frame1.scss
@@ -1,11 +1,9 @@
-$door_width: 250px;
-
 .frame1 {
     .obiWan {
         position: absolute;
         width: 256px;
         right: 0;
-        top: 200px;
+        top: 10%;
 
         .talkbubble {
             width: 300px;
@@ -69,14 +67,15 @@ $door_width: 250px;
         .door-list {
             position: relative;
             display: inline-block;
-            width: $door_width * 3;
+            width: 81%;
             text-align: center;
             vertical-align: middle;
 
             .door-item {
                 position: relative;
                 display: inline-block;
-                width: $door_width;
+                width: 33.3%;
+                max-width: 250px;
 
                 .arrow-down {
                     position: absolute;
