--- a/interview_html/dev/style/partial/_frame1.scss
+++ b/interview_html/dev/style/partial/_frame1.scss
@@ -1,4 +1,8 @@
 .frame1 {
+    .banner {
+        background-color: #7A6857;
+    }
+
     .obiWan {
         position: absolute;
         width: 256px;
@@ -53,7 +57,8 @@
     .door-wrapper {
         position: absolute;
         width: 100%;
-        height: 100%;
+        bottom: 0;
+        left: 0;
         text-align: center;
 
         &:before {
@@ -75,7 +80,7 @@
                 position: relative;
                 display: inline-block;
                 width: 30%;
-                max-width: 250px;
+                max-width: 220px;
 
                 &:nth-child(2) {
                     margin: 0 5%;
@@ -83,7 +88,7 @@
 
                 .arrow-down {
                     position: absolute;
-                    left: 42.5%;
+                    left: 40%;
                     // top: -20%;
                     bottom: 120%;
                     width: 20%;
