--- a/interview_html/dev/style/style.scss
+++ b/interview_html/dev/style/style.scss
@@ -1,11 +1,13 @@
 @import "compass/reset";
 @import "compass/css3";
-@import "reset"; 
+@import "reset";
 @import "mixin";
+@import "partial/open_frame";
 @import "partial/tip";
 @import "partial/frame";
 @import "partial/frame1";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Indie+Flower:400,700);
 @include font-face("refinery29");
 @include font-face("BrownStd-Bold");
 @include font-face("BrownStd-Regular");
@@ -16,6 +18,10 @@ html {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+}
+
+html {
+    font-size: 1vw;
 }
 
 body {
@@ -33,11 +39,37 @@ section {
     font-family: 'Montserrat', sans-serif;
 }
 
-.content-middle {
-
+.Indie-Flower {
+    font-family: 'Indie Flower', cursive;
 }
+
 @keyframes ani-down {
     50% {
         @include transform(translateY(20px));
+    }
+}
+
+.rollover {
+    .hover {
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: 0;
+        @include transition(opacity ease 0.3s);
+    }
+    .normal {
+        opacity: 1;
+        @include transition(opacity ease 0.3s);
+    }
+}
+
+.desktop {
+    .rollover:hover {
+        .hover {
+            opacity: 1;
+        }
+        .normal {
+            opacity: 0;
+        }
     }
 }
