--- a/interview_html/dev/style/style.scss
+++ b/interview_html/dev/style/style.scss
@@ -8,6 +8,7 @@
 @import "partial/frame1";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower:400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato);
 @include font-face("refinery29");
 @include font-face("BrownStd-Bold");
 @include font-face("BrownStd-Regular");
