--- a/interview_html/dev/style/partial/_frame.scss
+++ b/interview_html/dev/style/partial/_frame.scss
@@ -4,6 +4,7 @@ $translate_x: 20px;
 .frame-list {
     position: relative;
     background-color: #fff;
+    overflow: hidden;
 
     .frame-intro-list {
         position: relative;
@@ -125,10 +126,72 @@ $translate_x: 20px;
             }
         }
     }
+
+    .frame-game-list {
+        opacity: 0;
+        visibility: visible;
+        background-color: red;
+        left: 100%;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+
+        .frame-game-item {
+            position: absolute;
+            width: 80%;
+            height: 90%;
+            opacity: 0;
+            visibility: hidden;
+            z-index: 1;
+            left: 10%;
+            top: 5%;
+
+            .frame-game-part {
+                position: relative;
+                display: inline-block;
+                width: 50%;
+                height: 100%;
+                vertical-align: middle;
+            }
+
+            .frame-game-left {
+
+                text-align: center;
+
+                .options {
+                    position: relative;
+                    display: inline-block;
+
+                    li {
+                        span {
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+
+            .page-back {
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                width: 60px;
+                cursor: pointer;
+
+                img {
+                    position: relative;
+                    width: 100%;
+                    display: block;
+                    @include transition(all ease $animation_time);
+                }
+            }
+        }
+
+    }
 }
 
-.desktop {
-    .frame-intro-item:hover {
+.desktop .frame-list {
+    .frame-intro-list .frame-intro-item:hover {
         background-color: #f1f1f1;
 
         .frame-intro-item-wrapper {
@@ -145,6 +208,14 @@ $translate_x: 20px;
 
             .next-page {
                 @include animation(next_swing 0.4s ease infinite alternate);
+            }
+        }
+    }
+
+    .frame-game-list .frame-game-item {
+        .page-back:hover {
+            img {
+                @include transform(translateX(-$translate_x));
             }
         }
     }
