--- a/interview_html/dev/style/partial/_frame.scss
+++ b/interview_html/dev/style/partial/_frame.scss
@@ -1,5 +1,6 @@
 $animation_time: 0.3s;
 $translate_x: 20px;
+$circle_width: 200px;
 
 .frame-list {
     position: relative;
@@ -10,7 +11,6 @@ $translate_x: 20px;
         position: relative;
         width: 100%;
         height: 100%;
-        max-width: 1280px;
         margin: 0 auto;
 
         .frame-intro-item {
@@ -19,6 +19,7 @@ $translate_x: 20px;
             margin: 0 auto;
             height: 33.33333%;
             cursor: pointer;
+            @include transform(translateX(-150%));
             @include transition(all ease $animation_time);
 
             .frame-intro-item-wrapper {
@@ -76,15 +77,18 @@ $translate_x: 20px;
                             span {
                                 font-size: 1.5vw;
                                 font-family: 'Lato', sans-serif;
+                                font-weight: 700;
                                 color: #fab23a;
                                 text-transform: uppercase;
                             }
                         }
 
                         .title {
+                            margin: 10px 0;
+
                             span {
                                 font-size: 3vw;
-                                font-family: 'Lato', sans-serif;
+                                font-family: 'Anton', sans-serif;
                             }
                         }
 
@@ -92,6 +96,7 @@ $translate_x: 20px;
                             span {
                                 font-size: 2vw;
                                 font-family: 'Lato', sans-serif;
+                                color: #777;
                             }
                         }
                     }
@@ -130,7 +135,7 @@ $translate_x: 20px;
     .frame-game-list {
         opacity: 0;
         visibility: visible;
-        background-color: red;
+        background-color: #f1f1f1;
         left: 100%;
         top: 0;
         width: 100%;
@@ -139,59 +144,234 @@ $translate_x: 20px;
 
         .frame-game-item {
             position: absolute;
-            width: 80%;
+            width: 90%;
             height: 90%;
             opacity: 0;
             visibility: hidden;
             z-index: 1;
-            left: 10%;
+            left: 5%;
             top: 5%;
 
-            .frame-game-part {
-                position: relative;
-                display: inline-block;
-                width: 50%;
-                height: 100%;
-                vertical-align: middle;
+            .circle {
+                position: absolute;
+                width: $circle_width;
+                height: $circle_width;
+                // background-color: #fff;
+                border-radius: 50%;
+                left: 0;
+                top: 0;
+                overflow: hidden;
+                background-image: url("../image/trends.jpg");
+                background-position-x: 48%;
+                background-repeat: no-repeat;
+                background-size: cover;
+                z-index: 2;
+                @include transform(scale(0));
+
+                .game-number {
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                    text-align: center;
+
+                    span {
+                        font-size: 100px;
+                        color: #fff;
+                        font-family: 'Montserrat', sans-serif;
+                        line-height: $circle_width;
+                    }
+                    z-index: 3;
+                }
             }
 
-            .frame-game-left {
+            .frame-game-wrapper {
+                position: relative;
+                margin-top: $circle_width / 2;
+                margin-left: $circle_width / 2;
+                display: block;
+                height: calc(100% - 100px);
+                z-index: 1;
 
-                text-align: center;
-
-                .options {
+                .frame-game-part {
                     position: relative;
                     display: inline-block;
+                    width: 50%;
+                    height: 100%;
+                    vertical-align: middle;
 
-                    li {
-                        span {
-                            font-size: 14px;
+                    &:after {
+                        content: "";
+                        display: inline-block;
+                        width: 0;
+                        height: 100%;
+                        vertical-align: middle;
+                    }
+                }
+
+                .frame-game-left {
+                    text-align: center;
+
+                    .options {
+                        position: relative;
+                        display: inline-block;
+                        vertical-align: middle;
+
+                        li {
+                            margin-top: 20px;
+                            margin-bottom: 20px;
+                            @include transform(translateY(20px));
+                            opacity: 0;
+
+                            span {
+                                color: #582c2b;
+                                font-size: 4vw;
+                                font-family: 'Merriweather Sans', sans-serif;
+                                font-family: 'Amita', cursive;
+                            }
                         }
+                    }
+                }
+
+                .frame-game-right {
+                    text-align: center;
+
+                    .frame-game-question {
+                        position: relative;
+                        display: inline-block;
+                        width: 80%;
+                        text-align: left;
+
+                        span {
+                            font-size: 4vw;
+                            font-family: 'Merriweather Sans', sans-serif;
+                            font-family: 'Amita', cursive;
+                        }
+                    }
+
+                    .divide-line {
+                        position: absolute;
+                        width: 2px;
+                        height: 50%;
+                        top: 25%;
+                        left: -1px;
+                        background-color: #000;
+                        @include transform(scaleY(0));
+                    }
+                }
+
+                .line {
+                    position: absolute;
+                    overflow: hidden;
+
+                    .bar {
+                        width: 100%;
+                        height: 100%;
+                        background-color: #2c3643;
+                    }
+                }
+
+                .line-top {
+                    width: 100%;
+                    height: 10px;
+                    top: -5px;
+
+                    .bar {
+                        width: 0;
+                    }
+                }
+
+                .line-right {
+                    width: 10px;
+                    top: -5px;
+                    right: -5px;
+                    height: calc(100% - 60px);
+
+                    .bar {
+                        height: 0;
+                    }
+                }
+
+                .line-bottom {
+                    width: calc(100% - 80px);
+                    height: 10px;
+                    bottom: -5px;
+
+                    .bar {
+                        width: 0;
+                    }
+                }
+
+                .line-left {
+                    width: 10px;
+                    top: 5px;
+                    left: -5px;
+                    height: 100%;
+
+                    .bar {
+                        height: 0;
                     }
                 }
             }
 
             .page-back {
                 position: absolute;
-                right: 0;
-                bottom: 0;
+                right: -30px;
+                bottom: -30px;
                 width: 60px;
                 cursor: pointer;
+                @include transition(all ease $animation_time);
+                z-index: 2;
+                opacity: 0;
 
                 img {
                     position: relative;
                     width: 100%;
                     display: block;
-                    @include transition(all ease $animation_time);
                 }
             }
         }
+    }
 
+    .loading {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: #f1f1f1;
+        top: 0;
+        left: 0;
+        // opacity: 0;
+        // visibility: hidden;
+        .loading-circle-wrapper {
+            position: relative;
+            display: inline-block;
+            width: 100%;
+            text-align: center;
+
+            .loading-circle {
+                display: inline-block;
+                width: 50px;
+                height: 50px;
+                vertical-align: middle;
+                border: 5px solid #eaeaea;
+                border-top-color: #582c2b;
+                @include border-radius(50%);
+                // @include transform(rotate(90deg));
+                @include animation(load_ani 0.8s linear infinite);
+            }
+        }
+
+        &:after {
+            content: "";
+            display: inline-block;
+            width: 0;
+            height: 100%;
+            vertical-align: middle;
+        }
     }
 }
 
 .desktop .frame-list {
-    .frame-intro-list .frame-intro-item:hover {
+    .frame-intro-list .frame-intro-item.ani:hover {
         background-color: #f1f1f1;
 
         .frame-intro-item-wrapper {
@@ -214,9 +394,7 @@ $translate_x: 20px;
 
     .frame-game-list .frame-game-item {
         .page-back:hover {
-            img {
-                @include transform(translateX(-$translate_x));
-            }
+            @include transform(translateX(-$translate_x));
         }
     }
 }
@@ -229,3 +407,14 @@ $translate_x: 20px;
         @include transform(translateX(20px));
     }
 }
+@include keyframes(load_ani) {
+    0% {
+        @include transform(rotate(0));
+    }
+    // 33% {
+    //     @include transform(rotate(180deg))
+    // }
+    100% {
+        @include transform(rotate(360deg));
+    }
+};
