--- a/interview_html/dev/style/style.scss
+++ b/interview_html/dev/style/style.scss
@@ -5,10 +5,11 @@
 @import "partial/open_frame";
 @import "partial/tip";
 @import "partial/frame";
-@import "partial/frame1";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Amita|Merriweather+Sans);
+@import url(https://fonts.googleapis.com/css?family=Anton);
 @include font-face("refinery29");
 @include font-face("BrownStd-Bold");
 @include font-face("BrownStd-Regular");
@@ -19,6 +20,7 @@ html {
     width: 100%;
     height: 100%;
     // overflow-x: hidden;
+    // overflow-y: scroll;
 }
 
 html {
@@ -43,11 +45,14 @@ section {
 .Indie-Flower {
     font-family: 'Indie Flower', cursive;
 }
-
 @keyframes ani-down {
     50% {
         @include transform(translateY(20px));
     }
+}
+
+span {
+    cursor: default;
 }
 
 .rollover {
@@ -58,6 +63,7 @@ section {
         opacity: 0;
         @include transition(opacity ease 0.3s);
     }
+
     .normal {
         opacity: 1;
         @include transition(opacity ease 0.3s);
@@ -69,6 +75,7 @@ section {
         .hover {
             opacity: 1;
         }
+
         .normal {
             opacity: 0;
         }
