--- a/interview_html/dev/style/style.scss
+++ b/interview_html/dev/style/style.scss
@@ -7,7 +7,7 @@
 @import "partial/frame";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower:400,700);
-@import url(https://fonts.googleapis.com/css?family=Bangers|Eczar|Roboto+Condensed);
+@import url(https://fonts.googleapis.com/css?family=Bangers|Eczar|Roboto+Condensed|Changa+One);
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://fonts.googleapis.com/css?family=Amita|Merriweather+Sans);
 @import url(https://fonts.googleapis.com/css?family=Francois+One|Varela+Round);
