--- a/interview_html/dev/style/style.scss
+++ b/interview_html/dev/style/style.scss
@@ -7,10 +7,8 @@
 @import "partial/frame";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower:400,700);
-@import url(https://fonts.googleapis.com/css?family=Bangers|Eczar|Roboto+Condensed|Changa+One);
-@import url(https://fonts.googleapis.com/css?family=Lato);
-@import url(https://fonts.googleapis.com/css?family=Amita|Merriweather+Sans);
-@import url(https://fonts.googleapis.com/css?family=Francois+One|Varela+Round);
+@import url(https://fonts.googleapis.com/css?family=Bangers|Eczar|Roboto+Condensed|Changa+One|Titillium+Web);
+@import url(https://fonts.googleapis.com/css?family=Amita);
 @include font-face("refinery29");
 @include font-face("BrownStd-Bold");
 @include font-face("BrownStd-Regular");
@@ -20,8 +18,6 @@ body,
 html {
     width: 100%;
     height: 100%;
-    // overflow-x: hidden;
-    // overflow-y: scroll;
 }
 
 html {
@@ -30,6 +26,7 @@ html {
 
 body {
     background-color: #f1f1f1;
+    overflow-x: hidden;
 }
 
 section {
@@ -53,7 +50,7 @@ section {
 }
 
 span {
-    cursor: default;
+    // cursor: default;
 }
 
 .rollover {
