1027 local version almost finish

--- a/interview_html/dev/style/style.scss
+++ b/interview_html/dev/style/style.scss
@@ -5,9 +5,10 @@
 @import "partial/open_frame";
 @import "partial/tip";
 @import "partial/frame";
+@import "partial/evaluationFrame";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower:400,700);
-@import url(https://fonts.googleapis.com/css?family=Bangers|Eczar|Roboto+Condensed|Changa+One|Titillium+Web);
+@import url(https://fonts.googleapis.com/css?family=Bangers|Eczar|Roboto+Condensed|Changa+One|Titillium+Web|Gloria+Hallelujah);
 @import url(https://fonts.googleapis.com/css?family=Amita);
 @include font-face("refinery29");
 @include font-face("BrownStd-Bold");
