--- a/interview_html/dev/style/style.scss
+++ b/interview_html/dev/style/style.scss
@@ -6,9 +6,7 @@
 @import "partial/tip";
 @import "partial/frame";
 @import "partial/evaluationFrame";
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400);
-@import url(https://fonts.googleapis.com/css?family=Indie+Flower:400);
-@import url(https://fonts.googleapis.com/css?family=Bangers|Eczar|Roboto+Condensed|Changa+One|Titillium+Web|Gloria+Hallelujah);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400|Indie+Flower:400|Bangers|Eczar|Roboto+Condensed|Changa+One|Titillium+Web|Gloria+Hallelujah);
 @include font-face("refinery29");
 @include font-face("BrownStd-Bold");
 @include font-face("BrownStd-Regular");
